--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/internet.js"></script>
     <title>Event Qso Logger</title>
   </head>
   <body>
-	<div id="app">
-		
-	</div>
+    <div id="app"></div>
   </body>
 </html>
