--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,21 @@
     <title>Event Qso Logger</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="header">
+      <!-- Create a hamburger menu that opens as a dropdown when clicked -->
+      <div class="dropdown">
+		<!-- Create three parallel lines -->
+		<div class="line1"></div>
+		<div class="line2"></div>
+		<div class="line3"></div>
+        <div class="dropdown-content">
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="contact.html">Contact</a>
+        </div>
+      <h1>Event Qso Logger</h1>
+    </div>
+    <div id="app">
+    </div>
   </body>
 </html>
