--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="/internet.js"></script>
-    <title>Event Qso Logger</title>
-  </head>
-  <body>
-    <div class="header">
-      <!-- Create a hamburger menu that opens as a dropdown when clicked -->
-      <div class="dropdown">
-		<!-- Create three parallel lines -->
-		<div class="line1"></div>
-		<div class="line2"></div>
-		<div class="line3"></div>
-        <div class="dropdown-content">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="/internet.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Event Qso Logger</title>
+</head>
+
+<body>
+  <div class="header">
+    <!-- Create a hamburger menu that opens as a dropdown when clicked -->
+    <!--<div class="dropdown">
+      Create three parallel lines 
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+      <div class="dropdown-content">
+        <a href="index.html" class="">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </div>-->
+      <button id="dropdownButton" data-dropdown-toggle="dropdown" class="text-black bg-white hover:bg-black focus:ring-4 focus: outline-none focus:ring-slate-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex"></button>
       <h1>Event Qso Logger</h1>
     </div>
     <div id="app">
     </div>
-  </body>
+</body>
+
 </html>
