--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,18 @@
 
 <body>
   <div class="header">
-      <button id="dropdownButton" data-dropdown-toggle="dropdown" class="text-black bg-white hover:bg-black focus:ring-4 focus: outline-none focus:ring-slate-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex"></button>
+      <button id="dropdownButton" data-dropdown-toggle="dropdown" data-dropdown-trigger="hover" class="text-white bg-black hover:bg-black focus:ring-4 focus: outline-none focus:ring-slate-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-white dark:hover:bg-white dark:focus:ring-slate-300" type="button">Dropdown button <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+        </svg>
+        </button>
+
+        <div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
+          <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownButton">
+            <li>
+              <a href="" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black">Test</a>
+            </li>
+          </ul>
+        </div>
       <h1>Event Qso Logger</h1>
     </div>
     <div id="app">
