--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/internet.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Event Qso Logger</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" href="styles.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="/internet.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <title>Event Qso Logger</title>
-</head>
-
-<body>
-  <div class="header">
-      <button id="dropdownButton" data-dropdown-toggle="dropdown" data-dropdown-trigger="hover" class="text-white bg-black hover:bg-black focus:ring-4 focus: outline-none focus:ring-slate-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-white dark:hover:bg-white dark:focus:ring-slate-300" type="button">Dropdown button <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+  <body>
+    <div class="header">
+      <button
+        id="dropdownButton"
+        data-dropdown-toggle="dropdown"
+        data-dropdown-trigger="hover"
+        class="text-white bg-black hover:bg-black focus:ring-4 focus: outline-none focus:ring-slate-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-white dark:hover:bg-white dark:focus:ring-slate-300"
+        type="button"
+      >
+        Dropdown button
+        <svg
+          class="w-2.5 h-2.5 ms-3"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 10 6"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="m1 1 4 4 4-4"
+          />
         </svg>
-        </button>
+      </button>
 
-        <div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
-          <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownButton">
-            <li>
-              <a href="" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black">Test</a>
-            </li>
-          </ul>
-        </div>
+      <div
+        id="dropdown"
+        class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
+      >
+        <ul
+          class="py-2 text-sm text-gray-700 dark:text-gray-200"
+          aria-labelledby="dropdownButton"
+        >
+          <li>
+            <a
+              href="signup.html"
+              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
+              >signup</a
+            >
+          </li>
+        </ul>
+      </div>
       <h1>Event Qso Logger</h1>
     </div>
-    <div id="app">
-    </div>
-</body>
-
+    <div id="app"></div>
+  </body>
 </html>
