--- a/src/signup.html
+++ b/src/signup.html
@@ -5,9 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
         <script src="/internet.js"></script>
-        <script src="/signup.js"></script>
+        <script src="/auth.js" type="module"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
         <title>Event Qso Logger</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="app">
+            
+        </div>
 </html>
