--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <script src="/internet.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Event Qso Logger</title>
-  <script src="dropdown.js"></script>
+  <script defer src="/dropdown.js"></script>
 </head>
 
 <body>
