--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
 
 <body>
   <div class="header">
-    <button id="dropdownButton" data-dropdown-toggle="dropdown" data-dropdown-trigger="hover"
+    <div class="dropdownContainer p-[5px]">
+      <button id="dropdownButton" data-dropdown-toggle="dropdown" data-dropdown-trigger="hover"
       class="text-white bg-black hover:bg-black focus:ring-4 focus: outline-none focus:ring-slate-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-white dark:hover:bg-white dark:focus:ring-slate-300"
       type="button">
       Dropdown button
@@ -31,6 +32,8 @@
         </li>
       </ul>
     </div>
+    </div>
+    
     <h1>Event Qso Logger</h1>
   </div>
   <div id="app"></div>
