--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <div class="header">
     <div class="dropdownContainer p-[5px]">
       <button id="dropdownButton" data-dropdown-toggle="dropdown" data-dropdown-trigger="hover"
-      class="text-white bg-black hover:bg-black focus:ring-4 focus: outline-none focus:ring-slate-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-slate-400 dark:hover:bg-white dark:focus:ring-slate-300"
+      class="text-white bg-black hover:bg-black focus:ring-4 focus: outline-none focus:ring-slate-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-slate-400 dark:hover:bg-slate-800 dark:focus:ring-slate-300"
       type="button">
       Dropdown button
       <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
