--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="/internet.js"></script>
+  <script src="/js/internet.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Event Qso Logger</title>
-  <script defer src="/dropdown.js"></script>
+  <script defer src="/js/dropdown.js"></script>
 </head>
 
 <body>
