--- a/src/signup.html
+++ b/src/signup.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="styles.css" />
-        <script src="/internet.js"></script>
-        <script src="/auth.js" type="module"></script>
+        <link rel="stylesheet" href="/css/styles.css" />
+        <script src="/js/internet.js"></script>
+        <script src="/js/auth.js" type="module"></script>
         <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
         <title>Event Qso Logger</title>
     </head>
