--- a/src/signup.html
+++ b/src/signup.html
@@ -11,6 +11,19 @@
     </head>
     <body>
         <div id="app">
-            
+            <form class="authForm">
+                <div class="formGroup">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" />
+                </div>
+                <div class="formGroup">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" />
+                </div>
+                <div class="formGroup">
+                    <button type="submit" id="loginButton">Login</button>
+                    <button type="submit" id="signupButton">Signup</button>
+                </div>
+            </form>
         </div>
 </html>
