--- a/src/signup.html
+++ b/src/signup.html
@@ -7,6 +7,7 @@
         <script src="/js/internet.js"></script>
         <script src="/js/auth.js" type="module"></script>
         <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+        <script src="https://cdn.tailwindcss.com"></script>
         <title>Event Qso Logger</title>
     </head>
     <body>
