--- a/src/signup.html
+++ b/src/signup.html
@@ -14,18 +14,18 @@
         <div id="app">
             <div class="container">
                 <div class="form-box">
-                    <form class="authForm">
-                        <div class="formGroup">
+                    <form class="authForm items-center align-middle">
+                        <div class="formGroup p-1">
                             <label for="email">Email</label>
                             <input type="email" id="email" />
                         </div>
-                        <div class="formGroup">
+                        <div class="formGroup p-1">
                             <label for="password">Password</label>
                             <input type="password" id="password" />
                         </div>
                         <div class="formGroup">
-                            <button type="submit" id="loginButton">Login</button>
-                            <button type="submit" id="signupButton">Signup</button>
+                            <button class="p-1" type="submit" id="loginButton">Login</button>
+                            <button class="p-1" type="submit" id="signupButton">Signup</button>
                         </div>
                     </form>
                 </div>
