--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,10 @@
             <a href="signup.html"
               class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black">signup</a>
           </li>
+          <li>
+            <a href="createtable.html"
+              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black">TABLE CREATION</a>
+          </li>
         </ul>
       </div>
     </div>
