Fix Import Statement
Signed-off-by: Austin Hadley <admin@austinh.dev>

--- a/src/createtable.html
+++ b/src/createtable.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Table</title>
     <link rel="stylesheet" href="/css/table.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <form id="create-table-form" style="">
