--- a/src/signup.html
+++ b/src/signup.html
@@ -5,15 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/css/styles.css" />
         <script src="/js/internet.js"></script>
-        <script src="/js/auth.js" type="module"></script>
+        <script src="/js/supabase_auth.js" type="module"></script>
         <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
         <title>Event Qso Logger</title>
     </head>
     <body>
         <div id="app">
             <div class="container">
                 <div class="form-box">
-                    <form class="authForm items-center align-middle">
+                    <form class="authForm items-center align-middle" id="authForm">
                         <div class="formGroup p-1">
                             <label for="email">Email</label>
                             <input type="email" id="email" />
