--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="/css/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="/js/internet.js"></script>
+  <script defer src="/js/internet.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Event Qso Logger</title>
   <script defer src="/js/dropdown.js"></script>
@@ -29,12 +29,13 @@
       <div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
         <ul class="py-2 text-sm text-gray-700 dark:text-slate-200" aria-labelledby="dropdownButton">
           <li>
-            <a href="signup.html"
-              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black">signup</a>
+            <a id="signupButton" href="signup.html"
+              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black">Sign Up</a>
           </li>
           <li>
             <a href="createtable.html"
-              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black">TABLE CREATION</a>
+              class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black">Table Creation (add
+              filter for club admin l8r)</a>
           </li>
         </ul>
       </div>
