even more cleanup SAM.

--- a/src/createtable.html
+++ b/src/createtable.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form id="create-table-form" style="">
+    <form id="create-table-form">
         <label for="table-name">Table Name:</label>
         <input type="text" id="table-name" required>
         <br>
