Separated the two auth files..SAM.

--- a/src/signup.html
+++ b/src/signup.html
@@ -26,8 +26,8 @@
                         <input type="password" id="password" />
                     </div>
                     <div class="formGroup">
-                        <button class="p-1" type="submit" id="loginButton">Login</button>
-                        <button class="p-1" type="submit" id="signupButton">Signup</button>
+                        <button class="p-1" type="submit" id="signupButton">Signup</button><br>
+                        <label>Have an account already? Login <a href="/login.html">here</a>!</label>
                     </div>
                 </form>
             </div>
