--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Event Qso Logger</title>
   <script defer src="/js/dropdown.js"></script>
+  <script defer src="/js/qso.js"></script>
 </head>
 <!-- add comment-->
 
@@ -43,7 +44,60 @@
 
     <h1>Event Qso Logger</h1>
   </div>
-  <div id="app"></div>
+  <div id="app">
+    <div class="form-box">
+      <form id="qso-form">
+        <label for="callsign">Callsign</label>
+        <input type="text" id="callsign" name="callsign" placeholder="Enter your callsign" required />
+        <label for="band">Band</label>
+        <select id="band" name="band" required>
+          <option value="160m">160m</option>
+          <option value="80m">80m</option>
+          <option value="40m">40m</option>
+          <option value="20m">20m</option>
+          <option value="15m">15m</option>
+          <option value="10m">10m</option>
+          <option value="6m">6m</option>
+          <option value="2m">2m</option>
+          <option value="70cm">70cm</option>
+          <option value="23cm">23cm</option>
+          <option value="13cm">13cm</option>
+          <option value="9cm">9cm</option>
+          <option value="6cm">6cm</option>
+          <option value="3cm">3cm</option>
+          <option value="1.25cm">1.25cm</option>
+          <option value="6mm">6mm</option>
+          <option value="4mm">4mm</option>
+          <option value="2.5mm">2.5mm</option>
+          <option value="2mm">2mm</option>
+          <option value="1mm">1mm</option>
+        </select>
+        <label for="mode">Mode</label>
+        <select id="mode" name="mode" required>
+          <option value="CW">CW</option>
+          <option value="SSB">SSB</option>
+          <option value="FM">FM</option>
+          <option value="AM">AM</option>
+          <option value="RTTY">RTTY</option>
+          <option value="FT8">FT8</option>
+          <option value="FT4">FT4</option>
+          <option value="JS8">JS8</option>
+          <option value="PSK31">PSK31</option>
+          <option value="PSK63">PSK63</option>
+          <option value="PSK125">PSK125</option>
+          <option value="JT65">JT65</option>
+          <option value="JT9">JT9</option>
+          <option value="JT4">JT4</option>
+        </select>
+        <br />
+        <label for="frequency">Frequency</label>
+        <input type="text" id="frequency" name="frequency" placeholder="Enter the frequency" required />
+        <label for="field_day_exchange">Field Day Exchange</label>
+        <input type="text" id="field_day_exchange" name="field_day_exchange" placeholder="Enter the exchange" />
+        <button type="submit">Submit</button>        
+      </form>
+    </div>
+  </div>
 </body>
 
 </html>
