--- a/src/viewQSO.html
+++ b/src/viewQSO.html
@@ -8,6 +8,7 @@
     <script defer src="js/internet.js"></script>
     <script defer src="js/dropdown.js"></script>
     <script defer src="js/viewQSO.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div class="header">
