--- a/src/viewQSO.html
+++ b/src/viewQSO.html
@@ -92,12 +92,12 @@
             </thead>
             <tbody>
             <tr>
-                <th class="px-6 py-4">N1ABC</th>
-                <th class="px-6 py-4">Austin Dev</th>
-                <th class="px-6 py-4">20m</th>
-                <th class="px-6 py-4">SSB</th>
-                <th class="px-6 py-4">2023-12-17</th>
-                <th class="px-6 py-4">14:00 UTC</th>
+                <th class='px-6 py-4'>N1ABC</th>
+                <th class='px-6 py-4'>Austin Dev</th>
+                <th class='px-6 py-4'>20m</th>
+                <th class='px-6 py-4'>SSB</th>
+                <th class='px-6 py-4'>2023-12-17</th>
+                <th class='px-6 py-4'>14:00 UTC</th>
             </tr>
             </tbody>
         </table>
