--- a/src/viewQSO.html
+++ b/src/viewQSO.html
@@ -90,7 +90,7 @@
                     <th class="px-6 py-3">Time</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="table-body-omg">
             <tr>
                 <th class='px-6 py-4'>N1ABC</th>
                 <th class='px-6 py-4'>Austin Dev</th>
