--- a/src/viewQSO.html
+++ b/src/viewQSO.html
@@ -79,7 +79,7 @@
         <button id="searchButton" type="button">Search</button>
     </div>
     <div class="qso-table flex flex-col">
-        <table id="qso-table" class="table-auto w-full text-sm text-left text-gray-500 dark:text-gray-400">
+        <table id="qso-table" class="table-auto w-full text-sm text-left text-gray-500 dark:text-gray-400 text-center">
             <thead class="text-xs text-gray-700 uppercase dark:text-gray-300">
                 <tr>
                     <th class="px-6 py-3">Callsign</th>
