--- a/src/login.html
+++ b/src/login.html
@@ -17,6 +17,7 @@
         <div class="container">
             <div class="form-box">
                 <form class="authForm items-center align-middle" id="authForm">
+                    <h1 class="text-center text-3xl">Login</h1>
                     <div class="formGroup p-1">
                         <label for="email">Email</label>
                         <input type="email" id="email" />
