I AM GOING TO KILL SOMEONE OR SOMETHING
Signed-off-by: Austin Hadley <admin@austinh.dev>

--- a/src/login.html
+++ b/src/login.html
@@ -8,7 +8,8 @@
     <script src="/js/internet.js"></script>
     <script src="/js/supabase_auth.js" type="module"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>-->
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <title>Event Qso Logger</title>
 </head>
 
