demolished the hit list

--- a/src/index.html
+++ b/src/index.html
@@ -41,26 +41,26 @@
           </svg>
         </button>
         <div
-          id="dropdown"
-          class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
+                id="dropdown"
+                class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
         >
           <ul
-            class="py-2 text-sm text-gray-700 dark:text-slate-200"
-            aria-labelledby="dropdownButton"
+                  class="py-2 text-sm text-gray-700 dark:text-slate-200"
+                  aria-labelledby="dropdownButton"
           >
             <li>
               <a
-                id="signupButton"
-                href="signup.html"
-                class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
-                >Sign Up</a
-              >
+                      id="signupButton"
+                      href="viewQSO.html"
+                      class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
+              >View QSOs
+              </a>
             </li>
             <li>
               <a
-                href="createtable.html"
-                class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
-                >Table Creation (add filter for club admin l8r)</a
+                      href="createtable.html"
+                      class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
+              >Table Creation (add filter for club admin l8r)</a
               >
             </li>
           </ul>
