--- a/src/viewQSO.html
+++ b/src/viewQSO.html
@@ -49,10 +49,10 @@
                 <li>
                     <a
                             id="signupButton"
-                            href="signup.html"
+                            href="viewQSO.html"
                             class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
-                    >Sign Up</a
-                    >
+                    >View QSOs
+                    </a>
                 </li>
                 <li>
                     <a
