Format all the Files to be the same
Signed-off-by: Austin Hadley <admin@austinh.dev>

--- a/src/createtable.html
+++ b/src/createtable.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create Table</title>
-    <link rel="stylesheet" href="/css/table.css">
+    <link rel="stylesheet" href="/css/table.css" />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <form id="create-table-form">
-        <label for="table-name">Table Name:</label>
-        <input type="text" id="table-name" required>
-        <br>
-        <button type="submit">Create Table</button>
+      <label for="table-name">Table Name:</label>
+      <input type="text" id="table-name" required />
+      <br />
+      <button type="submit">Create Table</button>
     </form>
     <script src="/js/createTable.js"></script>
-</body>
-
+  </body>
 </html>
