--- a/src/login.html
+++ b/src/login.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -11,30 +10,33 @@
     <!--<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>-->
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <title>Event Qso Logger</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="app">
-        <div class="container">
-            <div class="form-box">
-                <form class="authForm items-center align-middle" id="authForm">
-                    <h1 class="text-center text-3xl">Login</h1>
-                    <div class="formGroup p-1">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" />
-                    </div>
-                    <div class="formGroup p-1">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" />
-                    </div>
-                    <div class="formGroup">
-                        <button class="p-1" type="submit" id="loginButton">Login</button><br>
-                        <label>Don't have an account? Sign up <a href="/signup.html">here</a>!</label>
-                    </div>
-                </form>
+      <div class="container">
+        <div class="form-box">
+          <form class="authForm items-center align-middle" id="authForm">
+            <h1 class="text-center text-3xl">Login</h1>
+            <div class="formGroup p-1">
+              <label for="email">Email</label>
+              <input type="email" id="email" />
             </div>
+            <div class="formGroup p-1">
+              <label for="password">Password</label>
+              <input type="password" id="password" />
+            </div>
+            <div class="formGroup">
+              <button class="p-1" type="submit" id="loginButton">Login</button
+              ><br />
+              <label
+                >Don't have an account? Sign up
+                <a href="/signup.html">here</a>!</label
+              >
+            </div>
+          </form>
         </div>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
