--- a/src/viewQSO.html
+++ b/src/viewQSO.html
@@ -1,109 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>View QSO</title>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/styles.css" />
     <script defer src="js/internet.js"></script>
     <script defer src="js/dropdown.js"></script>
     <script defer src="js/viewQSO.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
-<div class="header">
-    <div class="dropdownContainer p-[5px]">
+  </head>
+  <body>
+    <div class="header">
+      <div class="dropdownContainer p-[5px]">
         <button
-                id="dropdownButton"
-                data-dropdown-toggle="dropdown"
-                data-dropdown-trigger="hover"
-                class="text-white bg-black hover:bg-black focus:ring-4 focus: outline-none focus:ring-slate-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-slate-800 dark:hover:bg-slate-400 dark:focus:ring-slate-300"
-                type="button"
+          id="dropdownButton"
+          data-dropdown-toggle="dropdown"
+          data-dropdown-trigger="hover"
+          class="text-white bg-black hover:bg-black focus:ring-4 focus: outline-none focus:ring-slate-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-slate-800 dark:hover:bg-slate-400 dark:focus:ring-slate-300"
+          type="button"
         >
-            Dropdown button
-            <svg
-                    class="w-2.5 h-2.5 ms-3"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 10 6"
-            >
-                <path
-                        stroke="currentColor"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="2"
-                        d="m1 1 4 4 4-4"
-                />
-            </svg>
+          Dropdown button
+          <svg
+            class="w-2.5 h-2.5 ms-3"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 10 6"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 1 4 4 4-4"
+            />
+          </svg>
         </button>
 
         <div
-                id="dropdown"
-                class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
+          id="dropdown"
+          class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
         >
-            <ul
-                    class="py-2 text-sm text-gray-700 dark:text-slate-200"
-                    aria-labelledby="dropdownButton"
-            >
-                <li>
-                    <a
-                            id="signupButton"
-                            href="viewQSO.html"
-                            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
-                    >View QSOs
-                    </a>
-                </li>
-                <li>
-                    <a
-                            href="createtable.html"
-                            class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
-                    >Table Creation (add filter for club admin l8r)</a
-                    >
-                </li>
-            </ul>
+          <ul
+            class="py-2 text-sm text-gray-700 dark:text-slate-200"
+            aria-labelledby="dropdownButton"
+          >
+            <li>
+              <a
+                id="signupButton"
+                href="viewQSO.html"
+                class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
+                >View QSOs
+              </a>
+            </li>
+            <li>
+              <a
+                href="createtable.html"
+                class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
+                >Table Creation (add filter for club admin l8r)</a
+              >
+            </li>
+          </ul>
         </div>
+      </div>
+
+      <h1>Event Qso Logger</h1>
     </div>
-
-    <h1>Event Qso Logger</h1>
-</div>
-<div id="app">
-    <div class="searchCallsign flex flex-col justify-center items-center p-3">
+    <div id="app">
+      <div class="searchCallsign flex flex-col justify-center items-center p-3">
         <input
-
-                type="text"
-                id="callsign"
-                name="callsign"
-                placeholder="Enter Callsign To Search For"
-                required
-
+          type="text"
+          id="callsign"
+          name="callsign"
+          placeholder="Enter Callsign To Search For"
+          required
         />
         <button class="m-3" id="searchButton" type="button">Search</button>
-    </div>
-    <div class="qso-table flex flex-col">
-        <table id="qso-table" class="table-auto w-full text-sm text-left text-gray-500 dark:text-gray-400 text-center">
-            <thead class="text-xs text-gray-700 uppercase dark:text-gray-300 border-b">
-                <tr>
-                    <th class="px-6 py-3">Callsign</th>
-                    <th class="px-6 py-3">Operator</th>
-                    <th class="px-6 py-3">Band</th>
-                    <th class="px-6 py-3">Mode</th>
-                    <th class="px-6 py-3">Date</th>
-                    <th class="px-6 py-3">Time</th>
-                </tr>
-            </thead>
-            <tbody id="table-body-omg">
+      </div>
+      <div class="qso-table flex flex-col">
+        <table
+          id="qso-table"
+          class="table-auto w-full text-sm text-left text-gray-500 dark:text-gray-400 text-center"
+        >
+          <thead
+            class="text-xs text-gray-700 uppercase dark:text-gray-300 border-b"
+          >
             <tr>
-                <th class='px-6 py-4'>N1ABC</th>
-                <th class='px-6 py-4'>Austin Dev</th>
-                <th class='px-6 py-4'>20m</th>
-                <th class='px-6 py-4'>SSB</th>
-                <th class='px-6 py-4'>2023-12-17</th>
-                <th class='px-6 py-4'>14:00 UTC</th>
+              <th class="px-6 py-3">Callsign</th>
+              <th class="px-6 py-3">Operator</th>
+              <th class="px-6 py-3">Band</th>
+              <th class="px-6 py-3">Mode</th>
+              <th class="px-6 py-3">Date</th>
+              <th class="px-6 py-3">Time</th>
             </tr>
-            </tbody>
+          </thead>
+          <tbody id="table-body-omg">
+            <tr>
+              <th class="px-6 py-4">N1ABC</th>
+              <th class="px-6 py-4">Austin Dev</th>
+              <th class="px-6 py-4">20m</th>
+              <th class="px-6 py-4">SSB</th>
+              <th class="px-6 py-4">2023-12-17</th>
+              <th class="px-6 py-4">14:00 UTC</th>
+            </tr>
+          </tbody>
         </table>
+      </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
