fix me up before i go go

--- a/src/index.html
+++ b/src/index.html
@@ -50,18 +50,18 @@
           >
             <li>
               <a
-                id="signupButton"
-                href="viewQSO.html"
+                href="index.html"
                 class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
-                >View QSOs
-              </a>
+                >Insert QSO</a
+              >
             </li>
             <li>
               <a
-                href="createtable.html"
-                class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
-                >Table Creation (add filter for club admin l8r)</a
-              >
+                      id="signupButton"
+                      href="viewQSO.html"
+                      class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-black"
+              >View QSOs
+              </a>
             </li>
           </ul>
         </div>
